[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-env"
version = "0.1.0"
description = "MetaEnvironment: the always-on environment every brain lives in"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "ecoframe>=0.1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev   = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
